[tool.poetry]
name = "pycombo"
version = "0.1.00"
description = "Python wrapper around Combo network partitioning algorythm (C++)"
authors = ["Philipp <casyfill@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Casyfill/pyCombo"
keywords = ["Networks", "Graph Theory", "Mathematics", "network", "graph", "discrete mathematics", "math"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

include = [
    # C++ sources must be included in the sdist distributions
    {path = "src", format = "sdist"},
    # C++ extension must be included in the wheel distributions
    {path = "pycombo/*.so", format = "wheel"},
    {path = "pycombo/*.pyd", format = "wheel"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Casyfill/pyCombo/issues"
"Source Code" =  "https://github.com/Casyfill/pyCombo"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7"
pybind11 = "^2.6.1"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
networkx = "^2.5"
pytest-benchmark = "^3.2.3"
pytest-cov = "^2.10.1"
python-louvain = "^0.14"
flake8 = "3.8.3"
black = "^20.8b1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.1", "pybind11==2.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = "tests"
