[tool.poetry]
name = "pycombo"
version = "0.1.08"
description = "Python wrapper around Combo network partitioning algorithm (C++)"
authors = ["Philipp <casyfill@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Casyfill/pyCombo"
keywords = ["Networks", "Graph Theory", "Mathematics", "network", "graph", "discrete mathematics", "math"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

include = [
    # C++ sources must be included in the sdist distributions
    {path = "src", format = "sdist"},
    # C++ extension must be included in the wheel distributions
    {path = "pycombo/*.so", format = "wheel"},
    {path = "pycombo/*.pyd", format = "wheel"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Casyfill/pyCombo/issues"
"Source Code" =  "https://github.com/Casyfill/pyCombo"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
numpy = [
    {version = "^1.21", python = "<3.9"},
    {version = "^1.26", python = ">=3.9"}
]
scipy = [
    {version = "^1.10.1", python = "3.8"},
    {version = "^1.13.1", python = "3.9"},
    {version = ">=1.14.1", python = ">=3.10"}
]
pandas = [
    {version = "^2.0.3", python = "3.8"},
    {version = ">=2.2.2", python = ">=3.9"}
]
matplotlib = [
    {version = "^3.7.5", python = "3.8"},
    {version = ">=3.9.2", python = ">=3.9"}
]
scikit-learn = [
    {version = ">=1.3.2", python = "<3.10"},
    {version = ">=1.5.2", python = ">=3.10"},
]
pytest = ">=7.1.2"
networkx = ">=3.1"
igraph = ">=0.11.6"
leidenalg = ">=0.10.2"
cdlib = ">=0.4.0"
python-louvain = ">=0.16"
pytest-benchmark = ">=3.2.3"
pytest-cov = ">=2.10.1"
flake8 = [
    {version = ">=4.0.1", python = "3.8"},
    {version = ">=6.1.0", python = ">=3.9"},
]
black = ">=22.3"
pre-commit = ">=2.19.0"
pip = ">=21.0.1"
ipykernel = ">=6.29.5"
tqdm = ">=4.66.5"

[build-system]
requires = ["poetry-core>=1.0.1", "pybind11>=2.13.5", "setuptools>=74"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = "tests"
